--- a/css/index.css
+++ b/css/index.css
@@ -4,57 +4,87 @@
   padding: 0;
   box-sizing: border-box;
 }
-body {
-  position: relative;
-}
-body header {
+.main_bg {
   width: 100%;
-  height: 100%;
-  background: url("../image/shoesimg.jpg") no-repeat center fixed;
+  height: 500px;
+  background: url("../image/shoesimg.jpg") no-repeat center;
   background-size: cover;
-  padding-top: 50px;
-}
-body h1 {
   color: #fff;
   text-align: center;
-  margin-bottom: 120px;
+  padding-top: 1px;
 }
-.headerlor {
-  color: #fff;
-  text-align: center;
-  padding-bottom: 80px;
-  font-size: 12px;
+.main-title {
+  font-size: 40px;
+  margin-top: 100px;
+  margin-bottom: 25px;
 }
-.bt {
-  width: 100px;
+.main-content {
+  padding: 50px 0;
+}
+.main-button {
+  padding: 15px 40px;
+  font-size: 20px;
+  border: 0;
+  background-color: #fff;
+  transition: all 0.5s;
+}
+.main-button:hover {
+  background-color: aquamarine;
+}
+.explain-box {
+  position: relative;
+  width: 80%;
+  max-width: 500px;
+  min-width: 290px;
   margin: auto;
-  padding-bottom: 200px;
+  padding: 20px;
+  top: -20px;
+  margin-bottom: 20px;
+  background-color: aquamarine;
 }
-.bt .buy {
-  font-style: arial;
-  text-align: center;
-  font-size: 14px;
-  font-weight: 500;
-  color: black;
-  background-color: rgb(15, 156, 15);
-  padding-top: 15px;
-  padding-bottom: 15px;
-  border-radius: 4px;
+/* form box */
+.form-bg {
+  width: 100%;
+  padding: 30px 0;
+
+  background-color: #100250;
 }
-.topbox {
-  width: 600px;
-  height: 250px;
-  background-color: beige;
+.form-white {
+  width: 80%;
+  max-width: 600px;
+  background-color: #fff;
+  margin: auto;
+  padding: 30px;
+}
+form label {
+  font-size: 15px;
+  display: inline-block;
+}
+.w-100,
+.w-50 {
+  padding: 10px;
+}
+.w-50 {
+  width: 50%;
+  float: left;
+}
+.form-input {
+  width: 100%;
+  padding: 10px 20px;
+  border: 1px solid #ddd;
+  margin-top: 5px;
   border-radius: 2px;
-  margin-top: -20px;
-  margin-left: ;
-  position: absolute;
 }
-.bottombox {
-  width: 600px;
-  height: 250px;
-  border-radius: 2px;
-  background-color: beige;
-  position: absolute;
-  margin-top: 270px;
+.send-bt {
+  display: block;
+  margin-left: auto;
+  background-color: blueviolet;
+  padding: 10px 25px;
+  color: #fff;
+  border: none;
+  transition: all 0.5s;
+  cursor: pointer;
+}
+.send-bt:hover {
+  background-color: rgb(104, 32, 171);
 }
